Styling changes to help with some of the issues on mobile

--- a/static/global.css
+++ b/static/global.css
@@ -3,11 +3,11 @@
   --background-color: #C0C0C0;
   --home-svg-stroke: #000000;
   --text-color: #333;
-  --neon-color: #473380;
+  --neon-color: #584199;
   --neon-color-text: #00BFFF;
   --border-color: #292731; 
   --section-background-color: #f5f5f5;
-  --background-text-color: #0000FF; 
+  --background-text-color: rgb(0, 60, 190); 
   --star-color-light: #C0C0C0; /* Soft Gray for light mode */
   --star-color-dark: #FFFFFF;  /* White for dark mode */
 }
